# Lem_in

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  compile.sh  lem_in  lemin.h  main.c  main2.c  main_array_test.c  main_list_test.c  test  validator01.c
ft_printf/: Makefile  ft_conv_cs.c  ft_conv_diu.c  ft_conv_fen.c  ft_conv_ga.c  ft_conv_pox.c  ft_fillstruct.c  ft_flagmanagement.c  ft_formatparsing.c  ft_formatparsing_additional.c  ft_modifyers_management.c  ft_parse_a.c  ft_parse_colors.c  ft_parse_floats.c  ft_parse_floats2.c  ft_printf.c  ft_printf.h  ft_round_floats.c  ft_sprintf.c  ft_support_functions_1.c  ft_support_functions_2.c
includes/: lemin.h
libft/: Makefile
libft/includes/: libft.h
libft/src/array/includes/: ft_array.h
libft/src/array/src/: ft_array_foreach.c  ft_array_init.c  ft_array_modifyer.c
libft/src/error/includes/: ft_errors.h
libft/src/error/src/: ft_error_mngr.c
libft/src/ft_printf/includes/: ft_printf.h
libft/src/ft_printf/src/: ft_formatparsing.c  ft_parse_colors.c
libft/src/get_next_line/includes/: get_next_line.h
libft/src/lists/includes/: ft_mylist.h  ft_mylist_cell.h
libft/src/lists/src/: ft_mylist.c  ft_mylist_access.c  ft_mylist_capacity.c  ft_mylist_cell.c  ft_mylist_find.c  ft_mylist_insert.c  ft_mylist_interval.c  ft_mylist_modifier.c  ft_mylist_operator.c  ft_mylist_split.c
libft/src/memory/includes/: memory_ft.h
libft/src/memory/src/: ft_malloc_s.c  ft_memcmp.c  ft_realloc.c
libft/src/string/includes/: string_ft.h
libft/src/string/src/: ft_latoi.c  ft_strequ.c  ft_strsplit.c
src/: and_other_checkers.c  flag_manager.c  ft_printer.c  ft_printer2.c  input_data_validation.c  input_formating_checkers.c  input_getters_validation.c  main.c  memory_liberator.c  other_checkers.c  print_output.c  solution.c
