cmake_minimum_required(VERSION 3.8)
project(Lem_in)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        ft_printf/ft_conv_cs.c
        ft_printf/ft_conv_diu.c
        ft_printf/ft_conv_fen.c
        ft_printf/ft_conv_ga.c
        ft_printf/ft_conv_pox.c
        ft_printf/ft_fillstruct.c
        ft_printf/ft_flagmanagement.c
        ft_printf/ft_formatparsing.c
        ft_printf/ft_formatparsing_additional.c
        ft_printf/ft_modifyers_management.c
        ft_printf/ft_parse_a.c
        ft_printf/ft_parse_colors.c
        ft_printf/ft_parse_floats.c
        ft_printf/ft_parse_floats2.c
        ft_printf/ft_printf.c
        ft_printf/ft_printf.h
        ft_printf/ft_round_floats.c
        ft_printf/ft_sprintf.c
        ft_printf/ft_support_functions_1.c
        ft_printf/ft_support_functions_2.c
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/src/ft_atoi.c
        libft/src/ft_bzero.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isdigit.c
        libft/src/ft_isprint.c
        libft/src/ft_itoa.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_realloc.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/get_next_line.c main.c lemin.h)

add_executable(Lem_in ${SOURCE_FILES})